force-app/main/default/objects/Hotel_ABC__c/Hotel_ABC__c.object-meta.xml
<CustomObject>
    <label>Hotel ABC</label>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel ABC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>