force-app/main/default/objects/Hotel_ABC__c/fields/TotalNumberofRooms__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofRooms__c</fullName>
    <label>TotalNumberofRooms</label>
    <summarizedField>Rooms__c.Number_of_Rooms__c</summarizedField>
    <summaryFilterItems>
        <field>Rooms__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Rooms__c.Hotel_ABC__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>